Rules done. Need to test
