# swagger/spring-server/src/main/resources/api-spec.yaml
@@ -33,6 +33,8 @@ responses:
     description: "The identifier is already used. Please change and try again."
   NotFound:
     description: "The specified resource was not found."
+    schema:
+      type: "string"
 
 paths:
   /applications:
@@ -107,6 +109,8 @@ paths:
             $ref: '#/definitions/badge'
         401:
           $ref: "#/responses/Unauthorized"
+        404:
+          $ref: "#/responses/NotFound"
     patch:
       tags:
         - "Badges"
@@ -125,6 +129,8 @@ paths:
             type: "string"
         401:
           $ref: "#/responses/Unauthorized"
+        404:
+          $ref: "#/responses/NotFound"
 
   /pointScales:
     post:
@@ -181,6 +187,8 @@ paths:
             $ref: '#/definitions/pointScale'
         401:
           $ref: "#/responses/Unauthorized"
+        404:
+          $ref: "#/responses/NotFound"
     patch:
       tags:
         - "Point scales"
@@ -199,6 +207,8 @@ paths:
             type: "string"
         401:
           $ref: "#/responses/Unauthorized"
+        404:
+          $ref: "#/responses/NotFound"
 
   /rules:
     post:
@@ -255,6 +265,8 @@ paths:
             $ref: '#/definitions/rule'
         401:
           $ref: "#/responses/Unauthorized"
+        404:
+          $ref: "#/responses/NotFound"
     patch:
       tags:
         - "Rules"
@@ -273,6 +285,8 @@ paths:
             type: "string"
         401:
           $ref: "#/responses/Unauthorized"
+        404:
+          $ref: "#/responses/NotFound"
 
   /events:
     post:
